src/objects/Guest_game_details__x.object
<CustomObject>
    <description>Guest_game_details</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$gst_game_dtl</externalName>
    <fields>
        <fullName>c_game_cd__c</fullName>
        <label>Game code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_game_type__c</fullName>
        <label>Game type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <label>Property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_purge_flag__c</fullName>
        <label>Purge flag</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <label>Contact</label>
        <length>18</length>
        <referenceTargetField>Contact.ContactId__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guest game details</relationshipLabel>
        <relationshipName>Guest_game_details</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>d_date__c</fullName>
        <label>Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_purge_date__c</fullName>
        <label>Purge date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_rpt_period__c</fullName>
        <label>Rpt period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>Timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_actual_win__c</fullName>
        <label>Actual win</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avg_bet__c</fullName>
        <label>Average bet</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_play__c</fullName>
        <label>Cash play</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_marker_play__c</fullName>
        <label>Marker play</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_slot_denom__c</fullName>
        <label>Slot denom</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theoretical__c</fullName>
        <label>Theoretical</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_avgbet_div__c</fullName>
        <label>Average bet div</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <label>winet Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_len_of_play__c</fullName>
        <label>Length of play</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Guest game detail</label>
    <pluralLabel>Guest game details</pluralLabel>
</CustomObject>